--- a/app/views/shared/_match_result.html.erb
+++ b/app/views/shared/_match_result.html.erb
@@ -1,6 +1,12 @@
-<% products.each do |product| %>
-  <span>
-    <div>Name: <%= product.name %></div>
-    <div>Rough Color: <%= product.rough_color%></div>
-  </span>
+<% styles.each do |style|%> 
+  <% style.products.each do |product| %>
+    <% colors.each do |color_each| %>
+      <% if product.color.hue_level_id = color_each.hue_level_id %>
+        <span>
+          <div>Name: <%= product.name %></div>
+          <div>Color: <%= product.color.hue_level_id %>%></div>
+        </span>
+      <% end %>
+    <% end %>
+  <% end %>
 <% end %>
