first edition khroma/match complete

--- a/app/views/khroma/index.html.erb
+++ b/app/views/khroma/index.html.erb
@@ -32,7 +32,7 @@
 <!-- match 結果 -->
 <div id="match-result-panel">
   <h3>上身 Result</h3>
-  <div id="Up-result"></div>
+  <div id="up-result"></div>
   <h3>下身 Result</h3>
   <div id="down-result"></div>
 </div>
