--- a/app/views/genders/index.html.erb
+++ b/app/views/genders/index.html.erb
@@ -5,10 +5,10 @@
 
 <h1>推薦商品</h1>
 <% @genders.each do |gender| %>
-  <% gender.categories.each do |category| %>
+  <% gender.categories.limit(2).each do |category| %>
     <%= category.name %>
-    <% category.types.each do |type| %>
-      <% type.styles.each do |style| %>
+    <% category.types.limit(3).each do |type| %>
+      <% type.styles.limit(2).each do |style| %>
         <li><%= link_to style.products.first.name, product_path(style.products.first) %></li>
       <% end %>
     <% end %>
