--- a/app/views/shared/_match_result.html.erb
+++ b/app/views/shared/_match_result.html.erb
@@ -1,8 +1,10 @@
 <% type.products.each do |product|%> 
   <% if product.color.hue_level_id == hue_level.id %>
     <span>
+      <div>id: <%= product.id %></div>
       <div>Name: <%= product.name %></div>
       <div>Color: <%= product.color.hue_level_id %></div>
+      <div>Color: <%= product.color.hex %></div>
       </span>
     <% end %>
 <% end %>
