--- a/app/views/khroma/index.html.erb
+++ b/app/views/khroma/index.html.erb
@@ -1,38 +1,42 @@
-<h2>khroma match搜尋大法</h2>
-
-
-<div class="match-choice-panel">
-  <!-- 使用者先選擇男女 -->
-  <h3>Gender choice</h3>
-  <div id="gender-choice">
-    <%= collection_select(:gender, :gender_id, Gender.all, :id, :name, prompt: 'choose gender') %>
+<section id='match'></section>
+<div class="container">
+  <h2>khroma match搜尋大法</h2>
+  <div class="match-choice-panel">
+    <!-- 使用者先選擇男女 -->
+    <h3>Gender choice</h3>
+    <div id="gender-choice">
+      <%= collection_select(:gender, :gender_id, Gender.all, :id, :name, prompt: 'choose gender') %>
+    </div>
+    <!-- 使用者於此區選擇上身type 與 顏色hue -->
+    <div id="up-choice-panel">
+      <h3>上身 choice</h3>
+      <span id="up-type-choice">
+      </span>
+      <span id="up-hue-choice">
+        <%= collection_select(:hue_level, :id, HueLevel.all , :id, :name, prompt: 'choose color') %>
+      </span>
+    </div>
+    <div id="down-choice-panel">
+      <h3>下身 choice</h3>
+      <span id="down-type-choice"></span>
+      <span id="down-hue-choice">
+        <%= collection_select(:hue_level, :id, HueLevel.all , :id, :name, prompt: 'choose color') %>
+      </span>
+      </span>
+    </div>
   </div>
-  <!-- 使用者於此區選擇上身type 與 顏色hue -->
-  <div id="up-choice-panel">
-    <h3>上身 choice</h3>
-    <span id="up-type-choice">
-    </span>
-    <span id="up-hue-choice">
-      <%= collection_select(:hue_level, :id, HueLevel.all , :id, :name, prompt: 'choose color') %>
-    </span>
-  </div>
-  <div id="down-choice-panel">
-    <h3>下身 choice</h3>
-    <span id="down-type-choice"></span>
-    <span id="down-hue-choice">
-      <%= collection_select(:hue_level, :id, HueLevel.all , :id, :name, prompt: 'choose color') %>
-    </span>
-    </span>
-  </div>
+  <br />
+  <button id="match-btn">Khroma Match</button>
 </div>
-<br />
-<button id="match-btn">Khroma Match</button>
-
-<hr />
-<!-- match 結果 -->
-<div id="match-result-panel">
-  <h3>上身 Result</h3>
-  <div id="up-result"></div>
-  <h3>下身 Result</h3>
-  <div id="down-result"></div>
-</div>
+<section id="result">
+  <div class="container">
+    <hr />
+    <!-- match 結果 -->
+    <div id="match-result-panel">
+      <h3>上身 Result</h3>
+      <div id="up-result"></div>
+      <h3>下身 Result</h3>
+      <div id="down-result"></div>
+    </div>
+  </div>
+</section>
