--- a/app/views/shared/_recommend.html.erb
+++ b/app/views/shared/_recommend.html.erb
@@ -1,6 +1,7 @@
 
 <h1>必買商品</h1>
 <% objs.each do |obj| %>
+  <h3><%= obj.name %></h3>
   <% obj.products.order("RANDOM()").limit(10).each do |recommend_product| %>
     <%= recommend_product.name %>
   <% end %>
