--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -2,11 +2,5 @@
   <li><%= link_to type.name, type_styles_path(type) %></li>
 <% end %>
 
-
 <h1>推薦商品</h1>
-<% @types.each do |type| %>
-  <h3><%= type.name %></h3>
-  <% type.styles.each do |style| %>
-    <li><%= link_to style.products.first.name , product_path(style.products.first) %></li>
-  <% end %>
-<% end %>
+<%= render partial: "shared/recommend", locals: {objs: @types} %>
