--- a/app/views/genders/index.html.erb
+++ b/app/views/genders/index.html.erb
@@ -1,7 +1,18 @@
-<h1>Link</h1>
-<% @genders.each do |gender| %>
-  <li><%= link_to gender.name, gender_categories_path(gender.id) %></li>
-<% end %>
+<div class = "container">
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <ul class="nav nav-pills nav-justified">     
+        <% @genders.each do |gender| %>
+          <li class="nav-item">
+            <%= link_to gender.name, gender_categories_path(gender.id), class: "nav-link" %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
 
-<h1>推薦商品</h1>
-<%= render partial: "shared/recommend", locals: {objs: @genders} %>
+
+
+ 
+  <%= render partial: "shared/recommend", locals: {objs: @genders} %>
+</div>
