--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -1,6 +1,20 @@
-<% @types.each do |type| %>
-  <li><%= link_to type.name, type_styles_path(type) %></li>
-<% end %>
+<div class = "container">
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <ul class="nav nav-pills nav-justified">     
+        <% @types.each do |type| %>
+          <li class="nav-item">
+            <%= link_to type.name, type_styles_path(type), class: "nav-link" %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
 
-<h1>推薦商品</h1>
+
+
+
+
 <%= render partial: "shared/recommend", locals: {objs: @types} %>
+
+</div>
