--- a/app/views/shared/_recommend.html.erb
+++ b/app/views/shared/_recommend.html.erb
@@ -1,8 +1,14 @@
-
+  
+  <% color = ["bg-primary", "bg-success", "bg-danger", "bg-warning", "bg-info", "bg-dark"] %>
   <h1>推薦商品 (我不會說是random推薦的)</h1>
-  <% objs.each do |obj| %>
-    <h3><%= obj.name %></h3>
-    <% obj.products.order("RANDOM()").limit(10).each do |recommend_product| %>
-      <%= recommend_product.name %>
-    <% end %>
+  <% objs.each_with_index do |obj, index| %>
+    <div class="card">
+      <h5 class="card-header <%= color[index%6] %>  <%= "text-white" if color[index] == "bg-dark"  %> "><%= obj.name %></h5>
+      <div class="card-body">
+        <% obj.products.order("RANDOM()").limit(8).each do |recommend_product| %>
+          <%= recommend_product.name %>
+        <% end %>
+      </div>
+    </div>
   <% end %>
+
