--- a/app/views/admin/genders/index.html.erb
+++ b/app/views/admin/genders/index.html.erb
@@ -1,15 +1,37 @@
-<h1>分類新增</h1>
-<% @genders.each do |gender| %>
-  <li>
-    <%= link_to gender.name, admin_categories_path  %>
-    <%= link_to "編輯", edit_admin_gender_path(gender) %>
-    <%= link_to "刪除", admin_gender_path(gender), method: :delete %>
- 
-  </li>
-<% end %>
+<div class = "container">
 
-<%= form_for [:admin,@gender] do |f| %>
-  <%= f.label :name, "Name" %>
-  <%= f.text_field :name %>
-  <%= f.submit %>
-<% end %>
+  <%= render partial: "shared/admin_nav" %>
+
+    <table class="table table-hover table-dark">
+      <thead>
+        <tr>
+          <% @genders.first.attributes.each do |key,value|  %>
+            <th scope="col"><%= key %></th>
+          <% end %>
+            <th scope="col">edit</th> 
+            <th scope="col">delete</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @genders.each do |gender| %>
+          <tr>
+            <% gender.attributes.each do |key,value|  %>
+              <td><%= value %></td>
+            <% end %>
+            <td><%= link_to "編輯", edit_admin_gender_path(gender) %></td>
+            <td><%= link_to "刪除", admin_gender_path(gender), method: :delete %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+
+
+  <%= form_for [:admin,@gender] do |f| %>
+    <%= f.label :name, "Name" %>
+    <%= f.text_field :name %>
+    <%= f.submit %>
+  <% end %>
+
+
+
+</div>
