--- a/app/views/admin/types/index.html.erb
+++ b/app/views/admin/types/index.html.erb
@@ -1,25 +1,34 @@
-<% @types.each do |type| %>
-  <li>
-    <%= link_to type.name , admin_styles_path %>
-    
-    <%= link_to "編輯", edit_admin_type_path(type) %>
-    <%= link_to "刪除", admin_type_path(type), method: :delete %>
-  </li>
-<% end %>
+<div class = "container">
 
-<h3>可用的category id</h3>
-<% @categories.each do |category| %>
-  <li>
-    <%= category.name %>
-    <%= category.id %>
-  </li>
-<% end %>
+  <%= render partial: "shared/admin_nav" %>
 
-<h3>創造新type</h3>
-<%= form_for [:admin,@type] do |f| %>
-  <%= f.label :name, "Name" %>
-  <%= f.text_field :name %>
-  <%= f.label :category_id, "category_id" %>
-  <%= f.text_field :category_id %>
-  <%= f.submit %>
-<% end %>
+
+  <% @types.each do |type| %>
+    <li>
+      <%= link_to type.name , admin_styles_path %>
+      
+      <%= link_to "編輯", edit_admin_type_path(type) %>
+      <%= link_to "刪除", admin_type_path(type), method: :delete %>
+    </li>
+  <% end %>
+
+  <h3>可用的category id</h3>
+  <% @categories.each do |category| %>
+    <li>
+      <%= category.name %>
+      <%= category.id %>
+    </li>
+  <% end %>
+
+  <h3>創造新type</h3>
+  <%= form_for [:admin,@type] do |f| %>
+    <%= f.label :name, "Name" %>
+    <%= f.text_field :name %>
+    <%= f.label :category_id, "category_id" %>
+    <%= f.text_field :category_id %>
+    <%= f.submit %>
+  <% end %>
+
+    <%= render partial: "shared/admin_table", locals: {objs: @types} %>
+
+</div>
