--- a/app/views/admin/styles/index.html.erb
+++ b/app/views/admin/styles/index.html.erb
@@ -2,14 +2,28 @@
 
   <%= render partial: "shared/admin_nav" %>
 
-
-  <% @styles.each do |style| %>
-    <li>
-      <%= link_to style.name, admin_style_products_path(style)  %>
-      <%= link_to "編輯", edit_admin_style_path(style) %>
-      <%= link_to "刪除", admin_style_path(style), method: :delete %>
-    </li>
-  <% end %>
+    <table class="table table-hover table-dark">
+      <thead>
+        <tr>
+          <% @styles.first.attributes.each do |key,value|  %>
+            <th scope="col"><%= key %></th>
+          <% end %>
+            <th scope="col">edit</th> 
+            <th scope="col">delete</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @styles.each do |style| %>
+          <tr>
+            <% style.attributes.each do |key,value|  %>
+              <td><%= value %></td>
+            <% end %>
+            <td><%= link_to "編輯", edit_admin_style_path(style) %></td>
+            <td><%= link_to "刪除", admin_style_path(style), method: :delete %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 
 
   <h3>可用的type id</h3>
