Done: show results when given only one color

--- a/app/views/khroma/index.html.erb
+++ b/app/views/khroma/index.html.erb
@@ -33,10 +33,15 @@
     <hr />
     <!-- match 結果 -->
     <div id="match-result-panel">
-      <h3>上身 Result</h3>
+      <!-- Original -->
+      <!-- <h3>上身 Result</h3>
       <div id="up-result"></div>
       <h3>下身 Result</h3>
-      <div id="down-result"></div>
+      <div id="down-result"></div> -->
+      <!-- END of Original -->
+      
+      <div id="result"></div>
+
     </div>
   </div>
 </section>
