--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,18 +1,38 @@
-<% @products.each do |product| %>
-  <li>
-    <%= product.name%>
-    
-    <%= link_to "編輯", edit_admin_style_product_path(product.style, product) %>
-    <%= link_to "刪除", admin_style_product_path(product.style, product), method: :delete %>
-  </li>
-<% end %>
+<div class= "container">  
+  <%= render partial: "shared/admin_nav" %>
 
+  <table class="table table-hover table-dark">
+    <thead>
+      <tr>
+        <% if @products.count > 0 %>
+          <% @products.first.attributes.each do |key,value|  %>
+            <th scope="col"><%= key %></th>
+          <% end %>
+          <th scope="col">edit</th> 
+          <th scope="col">delete</th>
+          <% else %>
+            <h1>佔無products</h1>
+        <% end %>
+      </tr>
+    </thead>
+    <tbody>
+      <% @products.each do |product| %>
+        <tr>
+          <% product.attributes.each do |key,value|  %>
+            <td class = "td-width"><%= value %></td>
+          <% end %>
+          <td><%= link_to "編輯", edit_admin_style_product_path(@style, product) %></td>
+          <td><%= link_to "刪除", admin_style_product_path(@style, product), method: :delete %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
+  <h3>創造新product</h3>
+  <%= form_for [:admin,@style,@product] do |f| %>
+    <%= f.label :name, "Name" %>
+    <%= f.text_field :name %>
 
-<h3>創造新product</h3>
-<%= form_for [:admin,@style,@product] do |f| %>
-  <%= f.label :name, "Name" %>
-  <%= f.text_field :name %>
-
-  <%= f.submit %>
-<% end %>
+    <%= f.submit %>
+  <% end %>
+</div>
