--- a/app/views/admin/genders/edit.html.erb
+++ b/app/views/admin/genders/edit.html.erb
@@ -1,5 +1,35 @@
-<%= form_for [:admin,@gender] do |f| %>
-  <%= f.label :name, "Name" %>
-  <%= f.text_field :name %>
-  <%= f.submit %>
-<% end %>
+<div class = "container">
+
+  <%= render partial: "shared/admin_nav" %>
+  <h2>編輯項目</h2>
+    <table class="table table-hover table-dark">
+      <thead>
+        <tr>
+          <% @genders.first.attributes.each do |key,value|  %>
+            <th scope="col"><%= key %></th>
+          <% end %>
+          <th scope="col">edit</th> 
+          <th scope="col">delete</th>
+        </tr>
+      </thead>
+      <tbody>
+       
+          <tr>
+            <% @gender.attributes.each do |key,value|  %>
+              <td><%= link_to value, admin_gender_categories_path(@gender) %></td>
+            <% end %>
+            <td><%= link_to "編輯", edit_admin_gender_path(@gender) %></td>
+            <td><%= link_to "刪除", admin_gender_path(@gender), method: :delete %></td>
+          </tr>
+     
+      </tbody>
+    </table>
+
+  <h2>編輯區</h2>
+  <%= form_for [:admin,@gender] do |f| %>
+    <%= f.label :name, "Name" %>
+    <%= f.text_field :name %>
+    <%= f.submit %>
+  <% end %>
+
+</div>
