--- a/app/views/admin/types/edit.html.erb
+++ b/app/views/admin/types/edit.html.erb
@@ -1,16 +1,37 @@
-<h3>可用的category id</h3>
-<% @categories.each do |category| %>
-  <li>
-    <%= category.name %>
-    <%= category.id %>
-  </li>
-<% end %>
+<div class = "container">
 
-<h3>編輯ype</h3>
-<%= form_for [:admin,@type] do |f| %>
-  <%= f.label :name, "Name" %>
-  <%= f.text_field :name %>
-  <%= f.label :category_id, "category_id" %>
-  <%= f.text_field :category_id %>
-  <%= f.submit %>
-<% end %>
+  <%= render partial: "shared/admin_nav" %>
+  <h2>編輯項目</h2>
+    <table class="table table-hover table-dark">
+      <thead>
+        <tr>
+          <% @types.first.attributes.each do |key,value|  %>
+            <th scope="col"><%= key %></th>
+          <% end %>
+          <th scope="col">edit</th> 
+          <th scope="col">delete</th>
+        </tr>
+      </thead>
+      <tbody>
+       
+          <tr>
+            <% @type.attributes.each do |key,value|  %>
+              <td><%= link_to value, admin_gender_categories_path(@type) %></td>
+            <% end %>
+            <td><%= link_to "編輯", edit_admin_type_path(@type) %></td>
+            <td><%= link_to "刪除", admin_type_path(@type), method: :delete %></td>
+          </tr>
+     
+      </tbody>
+    </table>
+
+  <h2>編輯區</h2>
+  <%= form_for [:admin,@type] do |f| %>
+    <%= f.label :name, "Name" %>
+    <%= f.text_field :name %>
+    <%= f.label :category_id, "Category_id" %>
+    <%= f.text_field :category_id %>
+    <%= f.submit %>
+  <% end %>
+
+</div>
